--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                         </div>
                     </form>
                     <div class="conteiner-quantity">
-                        <h2 onclick ="remove()" class="decrement">-</h2>
+                        <button onclick ="remove()" class="decrement">-</button>
                         <h2 class="quantity">1</h2>
-                        <h2 onclick ="add()" class="increment">+</h2>
+                        <button onclick ="add()" class="increment">+</button>
                     </div>
                     <div class="conteiner-add-to-cart">
-                        <h2>ADD TO CART</h2>
+                        <button>ADD TO CART</button>
                     </div>
                 </section>
             </main>
